--- a/apps/loungees_seller/pubspec.yaml
+++ b/apps/loungees_seller/pubspec.yaml
@@ -2,7 +2,7 @@ name: loungees_seller
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -35,6 +35,26 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # Loungees 공유 패키지
+  shared:
+    path: ../../packages/shared
+
+  # Loungees 테마 패키지
+  loungees_theme:
+    path: ../../packages/theme
+
+  # Loungees 핵심 패키지
+  core:
+    path: ../../packages/core
+
+  # 상태 관리
+  provider: ^6.1.2
+
+  # Firebase (최신 안정 버전)
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.3
+  firebase_auth: ^5.3.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -51,7 +71,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
