feat: 셀러 관리 시스템 및 캠페인 기능 구현
- 셀러 인증 시스템 구현 (인증코드: 44007299)
- 캠페인 등록/관리/신청/가이드 기능 완성
- 내 캠페인 목록 및 상태 관리 기능
- 전화번호 입력 필드 숫자만 입력되도록 개선
- 모바일 최적화 (텍스트 크기 조정, 스크롤 개선)
- Firebase Hosting 배포 설정 (loungees-seller.web.app)
- 권한 기반 라우팅 시스템 구현
- 가격 포맷팅 유틸리티 공통화

--- a/apps/loungees_seller/firebase.json
+++ b/apps/loungees_seller/firebase.json
@@ -1,1 +1,56 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"loungees-49897","appId":"1:295380669772:android:e7b3d3eb8e61e94035ebe9","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"loungees-49897","appId":"1:295380669772:ios:53aaf3b40e68c3eb35ebe9","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"macos":{"default":{"projectId":"loungees-49897","appId":"1:295380669772:ios:53aaf3b40e68c3eb35ebe9","uploadDebugSymbols":false,"fileOutput":"macos/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"loungees-49897","configurations":{"android":"1:295380669772:android:e7b3d3eb8e61e94035ebe9","ios":"1:295380669772:ios:53aaf3b40e68c3eb35ebe9","macos":"1:295380669772:ios:53aaf3b40e68c3eb35ebe9","web":"1:295380669772:web:ee2a671ea74ba0e835ebe9","windows":"1:295380669772:web:8b0f4dc10d5b6e7735ebe9"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "loungees-49897",
+          "appId": "1:295380669772:android:e7b3d3eb8e61e94035ebe9",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "ios": {
+        "default": {
+          "projectId": "loungees-49897",
+          "appId": "1:295380669772:ios:53aaf3b40e68c3eb35ebe9",
+          "uploadDebugSymbols": false,
+          "fileOutput": "ios/Runner/GoogleService-Info.plist"
+        }
+      },
+      "macos": {
+        "default": {
+          "projectId": "loungees-49897",
+          "appId": "1:295380669772:ios:53aaf3b40e68c3eb35ebe9",
+          "uploadDebugSymbols": false,
+          "fileOutput": "macos/Runner/GoogleService-Info.plist"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "loungees-49897",
+          "configurations": {
+            "android": "1:295380669772:android:e7b3d3eb8e61e94035ebe9",
+            "ios": "1:295380669772:ios:53aaf3b40e68c3eb35ebe9",
+            "macos": "1:295380669772:ios:53aaf3b40e68c3eb35ebe9",
+            "web": "1:295380669772:web:ee2a671ea74ba0e835ebe9",
+            "windows": "1:295380669772:web:8b0f4dc10d5b6e7735ebe9"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "site": "loungees-seller",
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
