feat: 캠페인 가이드 페이지 UI 개선 및 구매정보 등록 기능 추가
- 캠페인 가이드 페이지 UI 개선 (색상, 레이아웃, 버튼 스타일)
- 구매완료 버튼 클릭 시 홈으로 이동하도록 변경
- 구매정보 등록 페이지로 변경 (캠페인 신청 → 구매정보 등록)
- 신청자 정보, 구매자 정보 카드 분리
- 구매자 추가 기능 구현 (동적 카드 생성)
- 해시 URL 라우팅 개선 (/#/campaign-guide?id=XXX)
- CORS 프록시 URL 업데이트로 이미지 로딩 개선
- 로그 정리 및 디버깅 코드 최적화
- Firebase 호스팅 설정 개선 (build/web 직접 사용)

--- a/apps/loungees_seller/firebase.json
+++ b/apps/loungees_seller/firebase.json
@@ -40,7 +40,7 @@
   },
   "hosting": {
     "site": "loungees-seller",
-    "public": "public",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
