--- a/packages/shared/pubspec.yaml
+++ b/packages/shared/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.19.0
+  http: ^1.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
